package com.example.downloader;

public interface Downloader {
    void download();
}
