@startuml

title __IMGDOWNLOADER.APP's Class Diagram__\n

  namespace com.example.JsonUtil {
    class com.example.JsonUtil.UrlListParser {
    }
  }
  

  namespace com.example.dao {
    interface com.example.dao.PicDao {
    }
  }
  

  namespace com.example.dao {
    class com.example.dao.PicDao_Impl {
    }
  }
  

  namespace com.example.db {
    abstract class com.example.db.MyDB {
    }
  }
  

  namespace com.example.db {
    class com.example.db.MyDB_Impl {
    }
  }
  

  namespace com.example.downloader {
    interface com.example.downloader.Downloader {
    }
  }
  

  namespace com.example.downloader {
    class com.example.downloader.ImgDownloader {
    }
  }
  

  namespace com.example.entity {
    class com.example.entity.Pic {
    }
  }
  

  namespace com.example.http {
    interface com.example.http.HttpHandler {
    }
  }
  

  namespace com.example.http {
    class com.example.http.HttpHelper {
    }
  }
  

  namespace com.example.imgdownloader {
    class com.example.imgdownloader.BuildConfig {
    }
  }
  

  namespace com.example.imgdownloader {
    class com.example.imgdownloader.MainActivity {
    }
  }
  

  namespace com.example.sqlUtil {
    class com.example.sqlUtil.PicUtil {
    }
  }
  

  com.example.dao.PicDao_Impl .up.|> com.example.dao.PicDao
  com.example.db.MyDB -up-|> androidx.room.RoomDatabase
  com.example.db.MyDB_Impl -up-|> com.example.db.MyDB
  com.example.db.MyDB_Impl o-- com.example.dao.PicDao : _picDao
  com.example.downloader.ImgDownloader .up.|> com.example.downloader.Downloader
  com.example.downloader.ImgDownloader .up.|> com.example.http.HttpHandler
  com.example.imgdownloader.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
